--- a/fee_calculator/apps/viewer/templates/viewer/fee_scheme.html
+++ b/fee_calculator/apps/viewer/templates/viewer/fee_scheme.html
@@ -35,58 +35,164 @@ Fee Calculator - {{ scheme.description }}
       <td class="govuk-table__cell">{{ scheme.end_date|default_if_none:"Present" }}</td>
     </tr>
     <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Offence class</th>
+      <td class="govuk-table__cell">{{ selected_offence_class.display_name }}</td>
+    </tr>
+    <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Prices count</th>
       <td class="govuk-table__cell">{{ prices_count }}</td>
     </tr>
   </tbody>
 </table>
 
-<table class="govuk-table">
-  <caption class="govuk-table__caption govuk-table__caption--m">Scenarios</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Name</th>
-      <th scope="row" class="govuk-table__header">Prices count</th>
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    {% for item in scenarios %}
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell">{{ item.scenario.name }}</td>
-      <td class="govuk-table__cell">{{ item.count }}</td>
-    </tr>
-    {% endfor %}
-  </tbody>
-</table>
+<form action="{% url 'viewer:fee_scheme' pk=scheme.pk %}" method="get">
+  {% if selected_offence_class.isNull %}
+  <div class="govuk-form-group">
+    <label class="govuk-label" for="offence_class">
+      Offence class
+    </label>
+    <select class="govuk-select" id="offence_class" name="offence_class">
+      <option value=""></option>
+      {% for item in offence_classes %}
+      <option value="{{ item.offence_class.label }}">{{ item.offence_class.display_name }}</option>
+      {% endfor %}
+    </select>
+  </div>
+  {% else %}
+  <input type="hidden" name="offence_class" value="{{ selected_offence_class.label }}">
+  {% endif %}
 
-<table class="govuk-table">
-  <caption class="govuk-table__caption govuk-table__caption--m">Offence Classes</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Id</th>
-      <th scope="row" class="govuk-table__header">Name</th>
-      <th scope="row" class="govuk-table__header">Description</th>
-      <th scope="row" class="govuk-table__header">Prices count</th>
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    {% for item in offence_classes %}
-    {% if not item.offence_class == None %}
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell">{{ item.offence_class.id }}</td>
-      <td class="govuk-table__cell">{{ item.offence_class.name }}</td>
-      <td class="govuk-table__cell">{{ item.offence_class.description }}</td>
-      <td class="govuk-table__cell">{{ item.count }}</td>
-    </tr>
-    {% else %}
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell">-</td>
-      <td class="govuk-table__cell">-</td>
-      <td class="govuk-table__cell">-</td>
-      <td class="govuk-table__cell">{{ item.count }}</td>
-    </tr>
-    {% endif %}
-    {% endfor %}
-  </tbody>
-</table>
+  <button class="govuk-button" data-module="govuk-button">
+    Filter
+  </button>
+  <a href="{% url 'viewer:fee_scheme' pk=scheme.pk %}" role="button" class="govuk-button govuk-button--warning">
+    Reset
+  </a>
+</form>
+
+<div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
+  <div class="govuk-accordion__section ">
+    <div class="govuk-accordion__section-header">
+      <h2 class="govuk-accordion__section-heading">
+        <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
+          Prices
+        </span>
+      </h2>
+    </div>
+    <div id="accordion-default-content-1" class="govuk-accordion__section-content"
+      aria-labelledby="accordion-default-heading-1">
+
+      <table class="govuk-table">
+        <caption class="govuk-table__caption govuk-table__caption--m">Prices</caption>
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">Scenario</th>
+            <th scope="row" class="govuk-table__header">Advocate Type</th>
+            <th scope="row" class="govuk-table__header">Offence Class</th>
+            <th scope="row" class="govuk-table__header">Fee Type</th>
+            <th scope="row" class="govuk-table__header">Unit</th>
+            <th scope="row" class="govuk-table__header">Fixed Fee</th>
+            <th scope="row" class="govuk-table__header">Fee/Unit</th>
+            <th scope="row" class="govuk-table__header">Limit from</th>
+            <th scope="row" class="govuk-table__header">Limit to</th>
+            <th scope="row" class="govuk-table__header">Strict range</th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          {% for price in prices %}
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">{{ price.scenario }}</td>
+            <td class="govuk-table__cell">{{ price.advocate_type }}</td>
+            <td class="govuk-table__cell">{{ price.offence_class }}</td>
+            <td class="govuk-table__cell">{{ price.fee_type }}</td>
+            <td class="govuk-table__cell">{{ price.unit }}</td>
+            <td class="govuk-table__cell">{{ price.fixed_fee|floatformat:2 }}</td>
+            <td class="govuk-table__cell">{{ price.fee_per_unit|floatformat:2 }}</td>
+            <td class="govuk-table__cell">{{ price.limit_from }}</td>
+            <td class="govuk-table__cell">{{ price.limit_to }}</td>
+            <td class="govuk-table__cell">{{ price.strict_range }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="govuk-accordion__section ">
+    <div class="govuk-accordion__section-header">
+      <h2 class="govuk-accordion__section-heading">
+        <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
+          Offence Classes
+        </span>
+      </h2>
+    </div>
+    <div id="accordion-default-content-2" class="govuk-accordion__section-content"
+      aria-labelledby="accordion-default-heading-2">
+      <table class="govuk-table">
+        <caption class="govuk-table__caption govuk-table__caption--m">Offence Classes</caption>
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">Id</th>
+            <th scope="row" class="govuk-table__header">Name</th>
+            <th scope="row" class="govuk-table__header">Description</th>
+            <th scope="row" class="govuk-table__header">Prices count</th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          {% for item in offence_classes %}
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">{{ item.offence_class.id }}</td>
+            <td class="govuk-table__cell">{{ item.offence_class.name }}</td>
+            <td class="govuk-table__cell">{{ item.offence_class.description }}</td>
+            <td class="govuk-table__cell">{{ item.count }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="govuk-accordion__section ">
+    <div class="govuk-accordion__section-header">
+      <h2 class="govuk-accordion__section-heading">
+        <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
+          Scenarios
+        </span>
+      </h2>
+    </div>
+    <div id="accordion-default-content-3" class="govuk-accordion__section-content"
+      aria-labelledby="accordion-default-heading-3">
+      <table class="govuk-table">
+        <caption class="govuk-table__caption govuk-table__caption--m">Scenarios</caption>
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="row" class="govuk-table__header">Name</th>
+            <th scope="row" class="govuk-table__header">Prices count</th>
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          {% for item in scenarios %}
+          {% if not item.scenario == None %}
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">
+              <a href="{% url 'viewer:fee_scheme' pk=scheme.pk %}?scenario={{item.scenario.pk}}">
+                {{ item.scenario.name }}
+              </a>
+            </td>
+            <td class="govuk-table__cell">{{ item.count }}</td>
+          </tr>
+          {% else %}
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">
+              <a href="{% url 'viewer:fee_scheme' pk=scheme.pk %}?scenario=None">
+                (Blank)
+              </a>
+            </td>
+            <td class="govuk-table__cell">{{ item.count }}</td>
+          </tr>
+          {% endif %}
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 {% endblock content %}
