--- a/fee_calculator/apps/viewer/templates/viewer/index.html
+++ b/fee_calculator/apps/viewer/templates/viewer/index.html
@@ -1,5 +1,9 @@
 {% extends 'layout.html' %}
 
+{% block breadcrumbs %}
+{% include '_breadcrumbs.html' with breadcrumbs=breadcrumbs %}
+{% endblock breadcrumbs %}
+
 {% block title %}
 Fee Calculator
 {% endblock title %}
