--- a/fee_calculator/apps/viewer/templates/viewer/index.html
+++ b/fee_calculator/apps/viewer/templates/viewer/index.html
@@ -18,6 +18,7 @@ Fee Calculator
     <nav aria-label="Sub navigation" class="breadcrumbs">
       <ul class="govuk-list">
         <li><a href="{% url 'viewer:fee_schemes' %}">Fee Schemes</a></li>
+        <li><a href="{% url 'viewer:scenarios' %}">Scenarios</a></li>
       </ul>
     </nav>
   </div>
