Optionally show prices in cards instead of table
As an experiment, cards are used to display prices to see if this is more
readable.

--- a/fee_calculator/templates/layout.html
+++ b/fee_calculator/templates/layout.html
@@ -21,6 +21,7 @@
   <link rel="apple-touch-icon" href="{% static 'assets/images/govuk-apple-touch-icon.png' %}">
 
   <link rel="stylesheet" type="text/css" href="{% static 'govuk-frontend-4.1.0.min.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'card.css' %}">
 
   <meta property="og:image" content="{% static 'assets/images/govuk-opengraph-image.png' %}">
 </head>
