--- a/fee_calculator/apps/viewer/templates/viewer/fee_scheme.html
+++ b/fee_calculator/apps/viewer/templates/viewer/fee_scheme.html
@@ -30,7 +30,11 @@ Fee Calculator - {{ scheme.description }}
     </div>
     <div id="accordion-default-content-1" class="govuk-accordion__section-content"
       aria-labelledby="accordion-default-heading-1">
+      {% if prices_view.table == 'checked' %}
       {% include 'viewer/fee_scheme/_prices_table.html' with prices=scheme.prices %}
+      {% else %}
+      {% include 'viewer/fee_scheme/_prices_cards.html' with prices=scheme.prices %}
+      {% endif %}
     </div>
   </div>
   <div class="govuk-accordion__section ">
