--- a/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_form.html
+++ b/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_form.html
@@ -31,6 +31,30 @@
   <input type="hidden" name="scenario" value="{{ scheme.selected_scenario.label }}">
   {% endif %}
 
+  <div class="govuk-form-group">
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend">
+        <p>View prices as ...</p>
+      </legend>
+      <div class="govuk-radios" data-module="govuk-radios">
+        <div class="govuk-radios__item">
+          <input {{ prices_view.table }} class="govuk-radios__input" id="view-prices-as-table" name="prices_view"
+            type="radio" value="table">
+          <label class="govuk-label govuk-radios__label" for="view-prices-as-table">
+            Table
+          </label>
+        </div>
+        <div class="govuk-radios__item">
+          <input {{ prices_view.cards }} class="govuk-radios__input" id="view-prices-as-cards" name="prices_view"
+            type="radio" value="cards">
+          <label class="govuk-label govuk-radios__label" for="view-prices-as-cards">
+            Cards
+          </label>
+        </div>
+      </div>
+    </fieldset>
+  </div>
+
   <button class="govuk-button" data-module="govuk-button">
     Filter
   </button>
