--- a/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_offence_classes_table.html
+++ b/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_offence_classes_table.html
@@ -9,12 +9,12 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-    {% for item in offence_classes %}
+    {% for offence_class in offence_classes %}
     <tr class="govuk-table__row">
-      <td class="govuk-table__cell">{{ item.offence_class.id }}</td>
-      <td class="govuk-table__cell">{{ item.offence_class.name }}</td>
-      <td class="govuk-table__cell">{{ item.offence_class.description }}</td>
-      <td class="govuk-table__cell">{{ item.count }}</td>
+      <td class="govuk-table__cell">{{ offence_class.id }}</td>
+      <td class="govuk-table__cell">{{ offence_class.name }}</td>
+      <td class="govuk-table__cell">{{ offence_class.description }}</td>
+      <td class="govuk-table__cell">{{ offence_class.count }}</td>
     </tr>
     {% endfor %}
   </tbody>
