Show main hearing date on feeschemes and feescheme viewer pages
Update viewer/templates for the viewer package to show the main_hearing_start_date and main_hearing_end_date on the /fee_schemes
and the /fee_schemes/1 pages

Update unit tests

--- a/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_summary.html
+++ b/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_summary.html
@@ -16,6 +16,14 @@
       <td class="govuk-table__cell">{{ scheme.end_date|default_if_none:"Present" }}</td>
     </tr>
     <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Main hearing start date</th>
+      <td class="govuk-table__cell">{{ scheme.main_hearing_start_date|default_if_none:"Present" }}</td>
+    </tr>
+    <tr class="govuk-table__row">
+      <th scope="row" class="govuk-table__header">Main hearing end date</th>
+      <td class="govuk-table__cell">{{ scheme.main_hearing_end_date|default_if_none:"Present" }}</td>
+    </tr>
+    <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Offence class</th>
       <td class="govuk-table__cell">{{ scheme.selected_offence_class.display_name }}</td>
     </tr>
