Replace main hearing date ranges with single earliest date
Replace main_hearing_start_date and main_hearing_end_date range with a single date called earliest_main_hearing_date

--- a/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_summary.html
+++ b/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_summary.html
@@ -16,12 +16,8 @@
       <td class="govuk-table__cell">{{ scheme.end_date|default_if_none:"Present" }}</td>
     </tr>
     <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Main hearing start date</th>
-      <td class="govuk-table__cell">{{ scheme.main_hearing_start_date|default_if_none:"Present" }}</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <th scope="row" class="govuk-table__header">Main hearing end date</th>
-      <td class="govuk-table__cell">{{ scheme.main_hearing_end_date|default_if_none:"Present" }}</td>
+      <th scope="row" class="govuk-table__header">Earliest main hearing date</th>
+      <td class="govuk-table__cell">{{ scheme.earliest_main_hearing_date|default_if_none:"Present" }}</td>
     </tr>
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Offence class</th>
