--- a/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_summary.html
+++ b/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_summary.html
@@ -17,7 +17,7 @@
     </tr>
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Earliest main hearing date</th>
-      <td class="govuk-table__cell">{{ scheme.earliest_main_hearing_date|default_if_none:"Present" }}</td>
+      <td class="govuk-table__cell">{{ scheme.earliest_main_hearing_date|default_if_none:"-" }}</td>
     </tr>
     <tr class="govuk-table__row">
       <th scope="row" class="govuk-table__header">Offence class</th>
