--- a/fee_calculator/apps/viewer/templates/viewer/fee_schemes.html
+++ b/fee_calculator/apps/viewer/templates/viewer/fee_schemes.html
@@ -39,7 +39,7 @@ Fee Schemes
       </td>
       <td class="govuk-table__cell">{{ scheme.start_date }}</td>
       <td class="govuk-table__cell">{{ scheme.end_date|default_if_none:"Present" }}</td>
-      <td class="govuk-table__cell">{{ scheme.earliest_main_hearing_date|default_if_none:"Present" }}</td>
+      <td class="govuk-table__cell">{{ scheme.earliest_main_hearing_date|default_if_none:"-" }}</td>
     </tr>
     {% endfor %}
   </tbody>
