--- a/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_prices_table.html
+++ b/fee_calculator/apps/viewer/templates/viewer/fee_scheme/_prices_table.html
@@ -12,6 +12,7 @@
       <th scope="row" class="govuk-table__header">Limit from</th>
       <th scope="row" class="govuk-table__header">Limit to</th>
       <th scope="row" class="govuk-table__header">Strict range</th>
+      <th scope="row" class="govuk-table__header">London Rates Apply</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
@@ -27,6 +28,7 @@
       <td class="govuk-table__cell">{{ price.limit_from }}</td>
       <td class="govuk-table__cell">{{ price.limit_to }}</td>
       <td class="govuk-table__cell">{{ price.strict_range }}</td>
+      <td class="govuk-table__cell">{{ price.london_rates_apply }}</td>
     </tr>
     {% endfor %}
   </tbody>
