--- a/fee_calculator/templates/layout.html
+++ b/fee_calculator/templates/layout.html
@@ -10,19 +10,11 @@
   <meta name="theme-color" content="#0b0c0c">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-  <link rel="shortcut icon" sizes="16x16 32x32 48x48" href="{% static 'assets/images/favicon.ico' %}"
-    type="image/x-icon">
-  <link rel="mask-icon" href="{% static 'assets/images/govuk-mask-icon.svg' %}" color="#0b0c0c">
-  <link rel="apple-touch-icon" href="{% static 'assets/images/govuk-apple-touch-icon.png' %}">
-  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'assets/images/govuk-apple-touch-icon-180x180.png' %}">
-  <link rel="apple-touch-icon" sizes="167x167" href="{% static 'assets/images/govuk-apple-touch-icon-167x167.png' %}">
-  <link rel="apple-touch-icon" sizes="152x152" href="{% static 'assets/images/govuk-apple-touch-icon-152x152.png' %}">
-  <link rel="apple-touch-icon" href="{% static 'assets/images/govuk-apple-touch-icon.png' %}">
-
-  <link rel="stylesheet" type="text/css" href="{% static 'govuk-frontend-4.1.0.min.css' %}">
+  
+  <link rel="manifest" href="{% static 'assets/manifest.json' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'govuk-frontend-5.11.0.min.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'card.css' %}">
-
+  
   <meta property="og:image" content="{% static 'assets/images/govuk-opengraph-image.png' %}">
 </head>
 
@@ -92,7 +84,7 @@
     </div>
   </footer>
 
-  <script src="{% static 'govuk-frontend-4.1.0.min.js' %}"></script>
+  <script src="{% static 'govuk-frontend-5.11.0.min.js' %}"></script>
 
   <script>
     window.GOVUKFrontend.initAll()
